fixing tracking blurb alignement

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
 }
 
 .heading p {
-    padding-left: 14%;
+    margin-left: 13em;
     padding-right:60%;
     font-size: 16px;
 }
